sgleam-core-tests/tests/snapshots/integration__run_images@crop3.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/crop3.gleam
---
<svg width="110.0" height="110.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <g>
      <defs><clipPath id="clip0" ><rect x="7.320508075688771" y="27.320508075688764" width="40.0" height="40.0" transform="rotate(-30.0 27.32050807568877 47.320508075688764)" /></clipPath></defs>
      <g clip-path="url(#clip0)" >
        <path d="M 34.64101615137755 19.999999999999996 A 40.0 40.0 -30.0 0 1 -34.641016151377556 60.0 A 40.0 40.0 -30.0 0 1 34.64101615137755 19.999999999999996 Z" fill="rgba(219, 112, 147, 1.0)" />
      </g>
      <defs><clipPath id="clip1" ><rect x="41.96152422706632" y="7.320508075688771" width="40.0" height="40.0" transform="rotate(-30.0 61.96152422706632 27.32050807568877)" /></clipPath></defs>
      <g clip-path="url(#clip1)" >
        <path d="M 103.92304845413264 -19.999999999999996 A 40.0 40.0 -30.0 0 1 34.64101615137755 19.999999999999996 A 40.0 40.0 -30.0 0 1 103.92304845413264 -19.999999999999996 Z" fill="rgba(240, 128, 128, 1.0)" />
      </g>
    </g>
    <g>
      <defs><clipPath id="clip2" ><rect x="27.320508075688764" y="61.96152422706632" width="40.0" height="40.0" transform="rotate(-30.0 47.320508075688764 81.96152422706632)" /></clipPath></defs>
      <g clip-path="url(#clip2)" >
        <path d="M 74.64101615137754 89.2820323027551 A 40.0 40.0 -30.0 0 1 5.358983848622442 129.2820323027551 A 40.0 40.0 -30.0 0 1 74.64101615137754 89.2820323027551 Z" fill="rgba(240, 128, 128, 1.0)" />
      </g>
      <defs><clipPath id="clip3" ><rect x="61.96152422706632" y="41.96152422706632" width="40.0" height="40.0" transform="rotate(-30.0 81.96152422706632 61.96152422706632)" /></clipPath></defs>
      <g clip-path="url(#clip3)" >
        <path d="M 143.92304845413264 49.2820323027551 A 40.0 40.0 -30.0 0 1 74.64101615137754 89.2820323027551 A 40.0 40.0 -30.0 0 1 143.92304845413264 49.2820323027551 Z" fill="rgba(219, 112, 147, 1.0)" />
      </g>
    </g>
  </g>
</svg>
