sgleam-core-tests/tests/snapshots/integration__run_images@ellipse2.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/ellipse2.gleam
---
<svg width="30.0" height="60.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 30.0 30.0 A 15.0 30.0 0.0 0 1 0.0 30.0 A 15.0 30.0 0.0 0 1 30.0 30.0 Z" fill="rgba(0, 0, 255, 1.0)" />
</svg>
